NavigationPane: First implementation of NavigationPane